Fix overflowing button

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   font-size: 1.7rem;
   letter-spacing: -0.4px;
+  overflow-wrap: break-word;
 }
 .button.disabled {
   cursor: default;
